kubernetestest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo
spec:
  rules:
  - host: todo
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-service
            port:
              number: 80
